--- a/_publications/geco/content.html
+++ b/_publications/geco/content.html
@@ -52,6 +52,24 @@
                 <div class="carousel-item">
                   <div class="columns is-multiline is-centered">
                     <div class="column is-one-quarter has-text-centered">
+                      <img class="overlay-gif" src="./assets/05_experiments/pck/CUB_200_2011/bird/dinov2_b14_518_upft1/src_1x_7_crop.png" />
+                    </div>
+                    <div class="column is-one-quarter has-text-centered">
+                      <img class="overlay-gif" src="./assets/05_experiments/pck/CUB_200_2011/bird/dinov2_b14_518_upft1/trg_1x_7_gt_crop.png" />
+                    </div>
+                    <div class="column is-one-quarter has-text-centered">
+                      {% include comparison_slider.html 
+                        first_img="./assets/05_experiments/pck/CUB_200_2011/bird/cnb1ilp9__/trg_1x_7_crop_blend.gif" 
+                        second_img="./assets/05_experiments/pck/CUB_200_2011/bird/geosc/trg_1x_7_crop_blend.gif" 
+                        first_caption="&#x1F98E; GECO"
+                        second_caption="Geo [1]"
+                      %}
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="columns is-multiline is-centered">
+                    <div class="column is-one-quarter has-text-centered">
                       <img class="overlay-gif" src="./assets/05_experiments/pck/ap10kpairs/sheep/dinov2_b14_518_upft1/src_11_6_crop.png" />
                     </div>
                     <div class="column is-one-quarter has-text-centered">
