--- a/_publications/geco/content.html
+++ b/_publications/geco/content.html
@@ -162,6 +162,29 @@
               <button id="carousel-next">&#10095;</button>
             </div>
           </div>
+          <div>
+            <p class="content has-text-justified">
+            <br><br>    
+            After marking a query location in the source image, we can observe the correspondence in the target image.
+            <br><br> 
+            <div class="columns is-centered">
+              <div class="column is-one-half">
+                <p class="content has-text-centered">
+                  Source Image
+                </p>
+              </div>
+              <div class="column is-one-half">
+                <p class="content has-text-centered">
+                  &#x1F98E; GECO"
+                </p>
+              </div>
+            </div>
+            <video width="75%" controls>
+              <source autoplay src="./assets/05_experiments/videos/polarbear.webm" type="video/webm" />
+              Your browser does not support the video tag.
+            </video>
+            </p>
+          </div>
       </div>
     </div>
   </div>
