--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -19,11 +19,12 @@ author_profile: false
 
 <section class="section">
     <p class="content has-text-centered">
-        <a href="/assets/cv_short.pdf" target="_blank">Download my CV</a>
+        <a href="/assets/cv.pdf" target="_blank">Download my CV</a>
     </p>
     <div class="hero-body">
-        <img src="/assets/cv_short_0.png" width="50%" />
-        <img src="/assets/cv_short_1.png" width="50%" />
+        <img src="/assets/cv-1.png" width="50%" />
+        <img src="/assets/cv-2.png" width="50%" />
+        <img src="/assets/cv-3.png" width="50%" />
     </div>
 </section>
 
