--- a/_publications/geco/content.html
+++ b/_publications/geco/content.html
@@ -390,6 +390,45 @@
 </section>
 
 
+
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-three-thirds">
+          <h2 class="title is-3 has-text-left">Pixel Warping</h2>
+          <p class="content has-text-justified">
+          <br><br>
+          &#x1F98E; GECO warps Pixels with geometric consistency.
+          <br><br>
+          </p>
+          <div class="columns is-multiline is-centered">
+            <div class="column is-one-third has-text-centered">
+              <img width="100%" src="./assets/05_experiments/swap/ap10kpairs/dog/geco/5_anim_pixel_reverse.gif" />
+            </div>
+            <div class="column is-one-third has-text-centered">
+              <img width="100%" src="./assets/05_experiments/swap/ap10kpairs/cat/geco/38_anim_pixel_reverse.gif" />
+            </div>
+            <div class="column is-one-third has-text-centered">
+              <img width="100%" src="./assets/05_experiments/swap/ap10kpairs/hamster/geco/6_anim_pixel_reverse.gif" />
+            </div>
+            <div class="column is-one-third has-text-centered">
+              <img width="100%" src="./assets/05_experiments/swap/ap10kpairs/dog/geco/500_anim_pixel_reverse.gif" />
+            </div>
+            <div class="column is-one-third has-text-centered">
+              <img width="100%" src="./assets/05_experiments/swap/ap10kpairs/cat/geco/84_anim_pixel_reverse.gif" />
+            </div>
+            <div class="column is-one-third has-text-centered">
+              <img width="100%" src="./assets/05_experiments/swap/ap10kpairs/hamster/geco/111_anim_pixel_reverse.gif" />
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
